--- a/util/angle_util.vcxproj
+++ b/util/angle_util.vcxproj
@@ -233,6 +233,7 @@
     <ClInclude Include="random_utils.h"/>
     <ClInclude Include="shader_utils.h"/>
     <ClInclude Include="shared_utils.h"/>
+    <ClInclude Include="testfixturetypes.h"/>
     <ClInclude Include="EGLWindow.h"/>
     <ClInclude Include="Event.h"/>
     <ClInclude Include="OSWindow.h"/>
