--- a/util/angle_util.vcxproj.filters
+++ b/util/angle_util.vcxproj.filters
@@ -26,6 +26,7 @@
     <ClCompile Include="shader_utils.cpp"/>
     <ClInclude Include="shader_utils.h"/>
     <ClInclude Include="shared_utils.h"/>
+    <ClInclude Include="testfixturetypes.h"/>
     <ClCompile Include="EGLWindow.cpp"/>
     <ClInclude Include="EGLWindow.h"/>
     <ClInclude Include="Event.h"/>
