--- a/src/libEGL/libEGL.rc
+++ b/src/libEGL/libEGL.rc
@@ -73,7 +73,7 @@ BEGIN
             VALUE "FileDescription", "ANGLE libEGL Dynamic Link Library"
             VALUE "FileVersion", ANGLE_VERSION_STRING
             VALUE "InternalName", "libEGL"
-            VALUE "LegalCopyright", "Copyright (C) 2011 Google Inc."
+            VALUE "LegalCopyright", "Copyright (C) 2002-2013 The ANGLE Project Authors. Portions Copyright (C) Microsoft Corporation."
             VALUE "OriginalFilename", "libEGL.dll"
             VALUE "PrivateBuild", ANGLE_VERSION_STRING
             VALUE "ProductName", "ANGLE libEGL Dynamic Link Library"
